assets/css/style.css
body {
	font-family: arial, helvetica, sans-serif;
 	margin: 0 0 0 0;
}

.jumbotron {
	position: static;
	background: rgba(61,97,116,1);
	background: url('../images/beach.jpg') no-repeat center center;
	background-size: cover;
	height: 100vh;
	width: auto;
	color: #FFF;
}

.container {
	position: relative;
	margin: 0 auto;
	background-color: #FFF;
	min-height: 100vh;
	border-top: 1px solid #fff;
}

.main {
	text-align: center;
	position: fixed;
	left: 50%;
	top: 50%;
	transform: translate(-50%,-50%);
	z-index: 0;
}

#banner_content {
	background-color: rgba(0,0,0,0.3);
	padding: 5px;
	border-radius: 50px;
}

.main h1 {
	font-weight: 600;
	font-size: 2.25em;
	margin-top: 0;
}

.main h4 {
	font-weight: 600;
	margin-top: 0;
}

#IDPhoto {
	height: 40vw;
	width: 40vw;
	max-width: 200px;
	max-height: 200px;
	background: url('../images/profile.jpg') no-repeat center center;
	background-size: contain;
	overflow: hidden;
	border-radius: 50%;
	border: 2px solid #fff;
	margin: 0 auto;
}

.content{
	margin: 0 auto;
	margin-top: 50px;
	max-width: 1150px;
	width:100%;
	min-height: 100vh;
	vertical-align: top;
	font: 1.2em Arial, Helvetica, sans-serif;
	text-align: left;
	color: #031927;
}
.content p{
	text-align: left;
}
.content h1 {
	color: #CF5C36;
	text-transform: uppercase;
	margin: 0;
}
.content p a {
	text-decoration: none;
	color: #cf5c36;
}
.content p a:hover{
	text-decoration: underline;
}

.main ul {
	padding: 10px 0 10px 0;
	margin: 0 auto;
	width: 100%;
}
.main ul li {
	display: inline-block;
	padding-left: 30px;
}
.main ul li:first-of-type {
	padding-left: 0;
}
.main ul li img {
	width: 50px;
}
.navigation ul {
	list-style: none;
	margin: 0;
	padding: 0;
	border-top: 2px solid #FFF;
}

.navigation ul li {
	display: inline-block;
	padding: 5px 0px;
	z-index: 0;
}

.navigation ul li button {
	outline: none;
	border: none;
	background: transparent;
	color: #fff;
	font: bold 1.5em Arial;
	text-decoration: none;
	/*Creates a fading effect during rollover*/
	-moz-transition: color 0.3s ease-out;
	-webkit-transition: color 0.3s ease-out;
	-o-transition: color 0.3s ease-out;
	transition: color 0.3s ease-out;
	cursor: pointer;
}

.navigation ul li button:hover {
	color: #508AA8;
}

.content ul {
	margin: 0;
}
.content ul li {
	margin: 0;
}
.content ul li button {
	background-color: #fff;
	outline: none;
	border: 2px solid #ddd;
	width: 200px;
	height: 200px;
	border-radius: 5px;
	-moz-transition: background 0.3s ease-out;
	-webkit-transition: background 0.3s ease-out;
	-o-transition: background 0.3s ease-out;
	transition: background 0.3s ease-out;
}
.content ul li#infosysLi {
	float: right;
}
.content ul li button:hover {
	background-color: #508AA8;
}

.footer {
	display: block;
	position: relative;
	width: 100%;
	height: 100px;
	background-color: #031927;
	border-top: 1px solid #031927;
	z-index: 2;
}

.footer p{
	color: #508AA8;
	font-size: 1em;
	float: right;
	padding-top: 25px;
	margin-right: 2%;
}

.projects {
	background: #DDD;
	height: 100vh;
	display: block;
}

.projects li{
	display: block;
	background: #fff;
}
.post {
	margin: 0 auto;
	overflow: auto;
	width: 90%;
}
#text {
	width: 50%;
}
#pic {
	width: 40%;
	float: right;
}
#pic img {
	width: 100%;
}
#pic p {
	font-size: 0.7em;
	color: #508aa8;
	font-weight: bold;
	margin-top: -3px;
}

@media only screen and (max-width: 480px){
	.post #text {
		display: block;
		width: 100%;
	}
	.post #pic {
		display: block;
		width: 100%;
	}
	.main ul li {
		display: block;
		padding: 0 0 0.5em 0;
	}
	#pic {
		margin: 1em 0 2em 0;
	}
}

